Fix contrast on disabled button

--- a/theme/css/components/switch-il8n.css
+++ b/theme/css/components/switch-il8n.css
@@ -17,6 +17,6 @@
 
 .switch-language span.disabled {
     background-color: var(--background-soft);
-    color: var(--foreground-soft);
+    color: var(--foreground);
     cursor: not-allowed;
 }
